Add DEBUG_LEVEL and BOT_OWNER_ID to .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DISCORD_TOKEN=
 ENABLE_TOXICITY=True
 ENABLE_TRANSLATION=True
 LIBRETRANSLATE_URL=http://localhost:5000/translate
+DEBUG_LEVEL=mod
+BOT_OWNER_ID=12345..
